# isart-resource-linked-list-starcraft

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: game_data.h  types.h
includes/entities/: entity.h  space_marine.h  zerg.h
includes/items/: armor.h  inventory.h  weapon.h
includes/managers/: display_manager.h  game_manager.h  space_marine_manager.h  zerg_manager.h
includes/utils/: my_put_char.h  my_put_number.h  my_put_string.h  sleep.h  string_length.h
src/: main.c
src/entities/: entity.c  space_marine.c  zerg.c
src/items/: armor.c  inventory.c  weapon.c
src/managers/: display_manager.c  game_manager.c  space_marine_manager.c  zerg_manager.c
src/utils/: my_put_char.c  my_put_number.c  my_put_string.c  sleep.c  string_length.c
